# TesseractVR

./: .gitignore  AfterSprint2.md  CMakeLists.txt  CMakePresets.json  README.md  requirements.md  vcpkg.json
shaders/: 09_shader_base.frag  09_shader_base.vert
src/: Application.cpp  Application.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
vrtest/: CMakeLists.txt  build.bat  main.cpp  rebuild.bat
